--- a/DAY04/index.css
+++ b/DAY04/index.css
@@ -1,5 +1,5 @@
 * {
-  padding: 0;
+  padding: 0 20px;
   margin: 0;
   box-sizing: border-box;
 }
@@ -16,6 +16,10 @@ nav {
   justify-content: center;
   align-items: center;
   gap: 10px;
+}
+
+a {
+  text-decoration-line: none;
 }
 
 nav div {
