--- a/css/index.css
+++ b/css/index.css
@@ -4,14 +4,17 @@
     --subtlegray: rgba(240, 240, 240, 0.89);
 }
 
-* {
+*,
+*::before,
+*::after {
     box-sizing: border-box;
     margin : 0;
     padding : 0;
 }
 
 html {
-    font-size: 1vmin;
+    font-size: 1vh;
+    height: 100vh;
 }
 
 body {
@@ -73,7 +76,7 @@ div.main-banner {
 div.main-banner-bg-img
 {
     border-radius: 1rem;
-    background: url('../asset/png/d72d05561bfdb209c688de2957f78ef1.jpeg');
+    background: url('../asset/img/d72d05561bfdb209c688de2957f78ef1.jpeg');
     overflow: hidden;
     background-size: cover;
     background-position: center center;
@@ -161,6 +164,9 @@ div.flexcontainer > div.flexchild-left {
     width: 60vw;
     height: 73rem;
     padding-left: 15vw;
+    /* border: 1px solid red; */
+    display: flex;
+    flex-wrap: wrap;
     /* background: yellow; */
 }
 
@@ -168,6 +174,7 @@ div.flexcontainer > div.flexchild-right {
     width: 40vw;
     height: 73rem;
     padding-right: 15vw;
+    /* border: 1px solid red; */
     /* background: yellowgreen; */
 }
 
@@ -182,13 +189,13 @@ form.diary-util {
     left: 3rem;
     width: calc(25vw - 3rem);
     top: 3rem;
-    height: 55rem;
+    /* height: 55rem; */
     right: 0;
 }
 
 form.diary-util > p.title
 {
-    font-size: 3rem;
+    font-size: min(3rem, 3vmin);
     font-weight: bold;
     line-height: 3rem;
     text-align: left;
@@ -201,7 +208,7 @@ form.diary-util > p.title
 
 form.diary-util > p.subtitle, p.text-input-string
 {
-    font-size: 2.5rem;
+    font-size: min(2.5rem, 2.5vmin);
     font-weight: bold;
     line-height: 2.5rem;
     text-align: left;
@@ -210,7 +217,7 @@ form.diary-util > p.subtitle, p.text-input-string
     margin-left: 2rem;
 }
 
-form.diary-util > div.flexlist, input.text-input, textarea.text-input, button.submit
+form.diary-util > div.flexlist, input.text-input, button.submit
 {
     width: calc(25vw - 6rem);
     margin-left: 2rem;
@@ -218,13 +225,13 @@ form.diary-util > div.flexlist, input.text-input, textarea.text-input, button.su
     flex-wrap: wrap;
     margin-bottom: 3rem;
     font-weight: 700;
-    font-size: 3rem;
+    font-size: min(3rem, 3vmin);
 }
 
 input.text-input
 {
     height: 5rem;
-    border: 0.2rem solid var(--lightgray);
+    border: 0.15rem solid var(--lightgray);
     border-radius: 1rem;
     margin-bottom: 1.5rem;
 }
@@ -232,7 +239,7 @@ input.text-input
 textarea.text-input
 {
     height: 15rem;
-    border: 0.2rem solid var(--lightgray);
+    border: 0.15rem solid var(--lightgray);
     border-radius: 1rem;
     margin-bottom: 1.5rem;
 }
@@ -240,7 +247,7 @@ textarea.text-input
 button.submit
 {
     height: 5rem;
-    font-size: 2.5rem;
+    font-size: min(2.5rem, 2.5vmin);
     line-height: 2.5rem;
     background: var(--gray);
     border: 1rem solid transparent;
@@ -256,7 +263,7 @@ button.submit > p
 div.diary-util > label.radio-option
 {
     font-family: system-ui, sans-serif;
-    font-size: 2rem;
+    font-size: min(2rem, 2vmin);
     font-weight: bold;
     line-height: 1.1;
     display: grid;
@@ -276,7 +283,7 @@ label.radio-option > input
 label.radio-option > p
 {
     display: inline;
-    font-size: 1.5rem;
+    font-size: min(1.5rem, 1.5vmin);
     font-weight: bold;
     line-height: 1.5rem;
 }
@@ -296,17 +303,47 @@ input[type="radio"]
     place-content: center;
 }
 
+input[type="text"], textarea
+{
+    font-size: min(1.5rem, 1.5vmin);
+}
+
+textarea
+{
+    width: calc(25vw - 6rem);
+    margin-left: 2rem;
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 3rem;
+    font-weight: 700;
+}
+
 li.flexchild
 {
-    width: 30rem;
-    height: 30rem;
+    width: 20rem;
+    height: 27rem;
     padding: 1rem;
+    transition-duration: 0.5s;
+    /* border: 1px green solid; */
+    /* position: sticky; */
+}
+
+select, option
+{
+    font-size: max(1.5rem, 1.5vmax);
+    background: var(--lightgray);
 }
 
 li.flexchild > div.list-item-border
 {
     border: 0.1rem solid var(--lightgray);
     border-radius: 1rem;
+}
+
+li.flexchild:hover
+{
+    opacity: 0.8;
+    transform: scale(1.1);
 }
 
 ul.flexlist
@@ -337,12 +374,21 @@ div.diary-listitem-status
 {
     display: flex;
     justify-content: space-between;
-    font-size: 2rem;
+    font-size: max(1rem, 1vmin);
     color: var(--lightgray);
 }
 
 div.diary-listitem-summary
 {
-    font-size: 1rem;
+    font-size: min(2rem, 2vmin);
     font-weight: bold;
+}
+
+li.diary-listitem.flexchild::marker {
+    color: transparent;
+}
+
+a.anchor-nodeco {
+    all: unset;
+    cursor: grab;
 }
