--- a/homework/diary/index.css
+++ b/homework/diary/index.css
@@ -1,26 +1,24 @@
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: "Pretendard Variable";
+    font-family: 'Pretendard Variable';
 }
 
-.body{
+.body {
     height: 100%;
 }
 
-.CSS_레이아웃{
+.CSS_레이아웃 {
     width: 100vw;
     height: auto;
     min-height: 100%;
     padding-bottom: 40px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
-    
 }
-
 
 .CSS_배너제목 {
     width: 1168px;
@@ -41,8 +39,22 @@
     align-items: center;
     width: 1168px;
     height: 48px;
-    margin-bottom: 42px;
+    margin-bottom: 32px;
     margin-top: 24px;
+}
+
+.CSS_감정선택상자 {
+    width: 1168px;
+    margin-bottom: 42px;
+    /* display: flex;
+    justify-content: flex-start;
+    align-items: center; */
+    /* align-self: stretch; */
+}
+
+#CSS_감정선택상자아이디 {
+    width: 120px;
+    height: 32px;
 }
 
 .CSS_보관함리스트_메뉴 {
@@ -58,15 +70,16 @@
 }
 
 .CSS_메인 {
-    display: flex;
-    flex-direction: row;
     width: 1168px;
     /* height: 1167px; */
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     margin-bottom: 40px;
 }
 
 .CSS_메인왼쪽 {
-    /* width: 784px; */
+    width: 784px;
     /* height: 1167px; */
     display: flex;
     flex-direction: row;
@@ -82,6 +95,17 @@
     flex-direction: column;
 }
 
+.CSS_메인왼쪽_카드 img {
+    transition: 0.5s;
+}
+
+.CSS_메인왼쪽_카드 img:hover {
+    cursor: pointer;
+    filter: blur(3px);
+    width: 110%;
+    height: 110%;
+}
+
 .CSS_메인왼쪽_카드_디테일 {
     display: flex;
     flex-direction: row;
@@ -91,7 +115,7 @@
 }
 
 .CSS_메인왼쪽_카드_디테일_기분 {
-    color: #28B4E1;
+    color: #28b4e1;
     font-size: 14px;
     font-style: normal;
     font-weight: 600;
@@ -99,7 +123,7 @@
     letter-spacing: -0.14px;
 }
 
-.CSS_메인왼쪽_카드_디테일_날짜{
+.CSS_메인왼쪽_카드_디테일_날짜 {
     color: var(--Gray-Gray-500, #919191);
     font-size: 14px;
     font-style: normal;
@@ -114,7 +138,7 @@
     padding: 0 8px;
     color: #000;
     text-overflow: ellipsis;
-    font-family: "Pretendard Variable";
+    font-family: 'Pretendard Variable';
     font-size: 18px;
     font-style: normal;
     font-weight: 700;
@@ -127,14 +151,14 @@
     height: 604px;
     padding: 24px;
     border-radius: 16px;
-    border: 1px solid var(--Gray-Gray-200, #D4D3D3);
-    background: var(--Gray-W, #FFF);
+    border: 1px solid var(--Gray-Gray-200, #d4d3d3);
+    background: var(--Gray-W, #fff);
     /* margin: 0 0 0 24px; */
 }
 
 .CSS_메인오른쪽_중간 {
     margin: 40px 0;
-}   
+}
 
 .CSS_오늘기분 {
     font-size: 20px;
@@ -179,8 +203,8 @@
     margin-bottom: 24px;
     padding: 12px 16px;
     border-radius: 8px;
-    border: 1px solid var(--Gray-Gray-200, #D4D3D3);
-    background: var(--Gray-W, #FFF);
+    border: 1px solid var(--Gray-Gray-200, #d4d3d3);
+    background: var(--Gray-W, #fff);
     width: 100%;
 }
 
@@ -189,7 +213,7 @@
     height: 128px;
     padding: 12px 16px;
     align-items: flex-start;
-    border: 1px solid var(--Gray-Gray-200, #D4D3D3);
+    border: 1px solid var(--Gray-Gray-200, #d4d3d3);
 }
 
 .CSS_등록하기 {
@@ -206,12 +230,25 @@
     top: 160px;
     width: 100%;
     height: 160px;
-    position: relative;  
+    position: relative;
     transform: translateY(-100%);
-    background: var(--Gray-Gray-50, #F2F2F2);
+    background: var(--Gray-Gray-50, #f2f2f2);
     display: flex;
     justify-content: center;
-}   
+}
+
+.CSS_상세메인타이틀 {
+    color: #000;
+    font-family: 'Pretendard Variable';
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 24px; /* 109.091% */
+    letter-spacing: -0.22px;
+    border-bottom: 2px solid #000;
+    width: 1168px;
+    padding-bottom: 12px;
+}
 
 .CSS_푸터글상자 {
     width: 1168px;
