--- a/css-js/homework/diary-savor/diary-saver.css
+++ b/css-js/homework/diary-savor/diary-saver.css
@@ -18,9 +18,11 @@ body {
 
 /* header */
 .header {
-  width: 100%;
+  min-width: 320px;
+  max-width: 1168px;
   height: 60px;
   margin-bottom: 24px;
+  gap: 10px;
 }
 
 .header p {
@@ -119,9 +121,9 @@ body {
 .board-post-line {
   display: flex;
   flex-wrap: wrap;
-  /* test */
   min-width: 750px;
   max-width: 784px;
+  min-height: 350px;
   justify-content: space-between;
   gap: 24px;
   align-self: stretch;
@@ -131,19 +133,30 @@ body {
   /* test */
   min-width: 350px;
   max-width: 350px;
-  display: flex;
   padding-bottom: 16px;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 16px;
   flex: 1 0 0;
+  transition: 0.5s;
+}
+
+.post a {
+  text-decoration: none;
+}
+
+.post:hover {
+  transform: scale(110%);
+  border-radius: 16px;
+  background: #fff;
+  box-shadow: 0px 2px 30px 0px rgba(0, 0, 0, 0.16);
+}
+
+.post:hover .emotion-img {
+  filter: blur(3px);
 }
 
 .emotion-img {
   width: 100%;
   height: 285px;
   padding: 12px;
-  margin-bottom: 16px;
   background-size: contain;
   border-radius: 16px;
 
@@ -156,6 +169,7 @@ body {
 .post-preview {
   display: flex;
   padding: 0px 8px;
+  margin-top: 16px;
   flex-direction: column;
   align-items: flex-start;
   gap: 8px;
@@ -400,4 +414,109 @@ body {
   font-weight: 300;
   line-height: 16px; /* 114.286% */
   letter-spacing: -0.14px;
+}
+
+/* ------------------------------------ */
+/* ----------- 일기 상세 페이지 ----------- */
+/* ------------------------------------ */
+.detail-container {
+  width: 1168px;
+  margin: 0px 376px;
+  padding: 0px 20px;
+}
+
+/* detail-header */
+.detail-header {
+  min-width: 320px;
+  max-width: 1168px;
+  height: 60px;
+  margin-bottom: 64px;
+  gap: 10px;
+}
+
+.detail-header p {
+  padding: 20px;
+  height: 60px;
+  min-width: 320px;
+  max-width: 1168px;
+  color: #000;
+  font-family: "Pretendard Variable";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 16px; /* 88.889% */
+  letter-spacing: -0.18px;
+}
+
+/* detail main */
+.detail-main-container {
+  max-width: 1168px;
+  margin-bottom: 40px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 24px;
+  align-items: flex-start;
+}
+
+.detail-content-top {
+  display: flex;
+  max-width: 1168px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
+  align-self: stretch;
+}
+
+.detail-content-title {
+  display: flex;
+  max-width: 1168px;
+  padding-bottom: 12px;
+  align-items: center;
+  gap: 10px;
+  align-self: stretch;
+  border-bottom: 2px solid #000;
+
+  color: #000;
+  font-family: "Pretendard Variable";
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 24px; /* 109.091% */
+  letter-spacing: -0.22px;
+}
+
+.detail-title {
+  display: flex;
+  max-width: 1168px;
+  justify-content: space-between;
+  align-items: center;
+  align-self: stretch;
+}
+
+.detail-title p:first-child {
+  color: #ea5757;
+  font-family: "Pretendard Variable";
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 24px; /* 120% */
+  letter-spacing: -0.2px;
+}
+
+.detail-title p:last-child {
+  color: var(--Gray-Gray-500, #919191);
+  font-family: "Pretendard Variable";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px; /* 142.857% */
+  letter-spacing: -0.14px;
+}
+
+.detail-menu {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
