--- a/homework/section1/index.css
+++ b/homework/section1/index.css
@@ -7,29 +7,34 @@
 .전체 {
     display: flex;
     justify-content: center;
-    width: 1920px;
     flex-direction: column;
     align-items: center;
     gap: 40px;
     flex-shrink: 0;
+    /* max-width: 1168px; */
 }
 
 .위쪽 {
     display: flex;
-    flex-direction: column;
+
     align-items: flex-start;
+    justify-content: center;
 
     gap: 24px;
     align-self: stretch;
 }
 
+.제발 {
+    justify-content: center;
+}
+
 .헤더 {
     display: flex;
     padding: 0px 20px;
-    flex-direction: column;
     align-items: center;
     gap: 10px;
     align-self: stretch;
+    justify-content: center;
 }
 
 
@@ -38,9 +43,11 @@
     height: 60px;
     min-width: 320px;
     max-width: 1168px;
+    width: 1168px;
     align-items: center;
     gap: 10px;
     align-self: stretch;
+    padding: 0 20px;
 }
 
 .타이틀 {
@@ -61,10 +68,11 @@
 
 .헤더와_푸터_사이 {
     display: flex;
-flex-direction: column;
-align-items: flex-start;
-gap: 24px;
-align-self: stretch;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 24px;
+    align-self: stretch;
+    max-width: 1168px;
 }
 
 .배너와_푸터_사이 {
@@ -73,6 +81,7 @@ align-self: stretch;
     align-items: center;
     gap: 42px;
     align-self: stretch;
+    /* max-width: 1168px; */
 }
 
 .배너_컨테이너 {
@@ -82,13 +91,13 @@ align-self: stretch;
     align-items: center;
     gap: 10px;
     align-self: stretch;
+    max-width: 1168px;
 }
 
 .배너 {
     align-items: center;
     height: 240px;
     min-width: 320px;
-    max-width: 1168px;
     align-self: stretch;
     border-radius: 24px;
     background: url("./images/배너.png") lightgray 50% / cover no-repeat;
