[240830] section02 필수과제 제출

--- a/[240829]_section01/myDiary(2).css
+++ b/[240829]_section01/myDiary(2).css
@@ -204,3 +204,24 @@
     justify-content: space-between;
   }
 }
+
+.newCard {
+  transition: transform 0.5s, opacity 0.5s;
+}
+
+.newCard:hover {
+  transform: scale(1.1);
+  opacity: 0.8;
+}
+
+#registerBtn {
+  transition: transform 0.5s;
+}
+
+#registerBtn:active {
+  transform: rotate(-1deg);
+}
+
+.filter {
+  margin-bottom: 30px;
+}
