--- a/01-diary/detail/detail_update.css
+++ b/01-diary/detail/detail_update.css
@@ -7,6 +7,10 @@
     padding: 0px 20px 0px 20px;
 }
 
+.home_link {
+    text-decoration: none;
+}
+
 .header_title {
     width: 1168px;
     height: 40px;
