--- a/다이어리/diary.css
+++ b/다이어리/diary.css
@@ -69,14 +69,17 @@
   align-items: flex-start;
   gap: 32px;
   align-self: stretch;
+  position: sticky;
+  top: 0px;
+  z-index: 100;
 }
 .navigation {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 32px;
   align-self: stretch;
   padding-left: 12px;
+  padding-bottom: 32px;
 }
 .navigation_menu {
   display: flex;
@@ -113,12 +116,13 @@
 }
 .sub_navigation {
   display: flex;
-  padding: 0px 20px;
+  padding: 20px 20px;
   flex-direction: column;
   align-items: center;
   align-self: stretch;
   position: relative;
-  height: 35px;
+  height: 80px;
+  background-color: #FFF;
 }
 .emotion_dropdown_layout {
   display: flex;
@@ -127,7 +131,6 @@
   gap: 16px 8px;
   align-self: stretch;
   flex-wrap: wrap;
-
 }
 .dropdown_name {
   display: flex;
@@ -261,7 +264,7 @@ ul li {
   border-radius: 16px;
   transition: width 0.5s, height 0.5px;
 }
-.delete_button {
+#delete_button {
   position: absolute;
   top: 12px;
   right: 12px;
