--- a/section01.css
+++ b/section01.css
@@ -1,276 +1,261 @@
 * {
+	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
-	box-sizing: border-box;
-	border: none;
+}
+
+body {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+a {
+	appearance: none;
+	text-decoration: none;
 }
 
 .wrapper {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	width: 1920px;
-	height: 100%;
+	margin: 0 20px 40px;
 }
 
 .wrapper__header {
-	width: 1168px;
+	width: 100%;
 	height: 60px;
-	padding: 0px 20px 0px 20px;
-	gap: 10px;
-	font-family: Pretendard Variable;
 	font-size: 18px;
 	font-weight: 700;
 	line-height: 16px;
-	letter-spacing: -0.01em;
-	text-align: left;
-	display: flex;
-	flex-direction: row;
-	justify-content: flex-start;
-	align-items: center;
-}
-
-.banner {
-	width: 1168px;
-	height: 240px;
-	border-radius: 24px 0px 0px 0px;
-	opacity: 0px;
-}
-
-.tab {
-	width: 1168px;
-	height: 48px;
-	gap: 16px;
-	margin: 24px 0px;
-	display: flex;
-	flex-direction: row;
-}
-
-.diarystore {
-	border-bottom: 2px solid black;
-	width: 119px;
-	height: 48px;
-	padding: 12px 8px 12px 8px;
-	gap: 10px;
-	font-family: Pretendard Variable;
-	font-size: 24px;
-	font-weight: 700;
-	line-height: 24px;
-	letter-spacing: -0.01em;
-	text-align: left;
-}
-
-.photostore {
-	width: 119px;
-	height: 48px;
-	padding: 12px 8px 12px 8px;
-	gap: 10px;
-	border: 0px 0px 2px 0px;
-	font-family: Pretendard Variable;
-	font-size: 24px;
-	font-weight: 500;
-	line-height: 24px;
-	letter-spacing: -0.01em;
-	text-align: left;
-	color: #ababab;
+	padding: 20px;
 }
 
 .wrapper__body {
 	display: flex;
-	flex-direction: row;
+	width: 100%;
 	gap: 24px;
 }
 
-.wrapper__left__body {
-	width: 784px;
-	height: 100%;
-	gap: 24px;
-	opacity: 0px;
+/* 배너 이미지 */
+.banner {
+	width: 100%;
+}
+
+/* 내비게이션 */
+.tab {
 	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-}
-
-.moodWrapper__item {
-	width: 380px;
-	height: 373px;
-	padding: 0px 0px 16px 0px;
+	align-items: center;
+	justify-content: flex-start;
 	gap: 16px;
-	border-radius: 16px 0px 0px 0px;
-}
-
-.mood-feel {
-	display: inline-block;
-	padding-left: 4px;
-	width: 49%;
-	text-align: left;
-}
-
-.mood-date {
-	display: inline-block;
-	padding-right: 4px;
-	width: 49%;
-	text-align: right;
-}
-
-.mood-thumbnail {
-	width: 380px;
-	height: 285px;
-	padding: 12px 0px 0px 0px;
-	gap: 10px;
-	border-radius: 16px 0px 0px 0px;
-}
-
-.mood-date {
-	margin: auto;
-}
-
-.mood-feel {
-	font-family: Pretendard Variable;
-	font-size: 14px;
-	font-weight: 600;
-	line-height: 20px;
-	letter-spacing: -0.01em;
-	text-align: left;
-}
-
-#sad {
-	color: #28b4e1;
-}
-
-#happy {
-	color: #ea5757;
-}
-
-#surprised {
-	color: #d59029;
-}
-
-#mad {
-	color: #777777;
-}
-
-#etc {
-	color: #a229ed;
-}
-
-.wrapper__right__body {
-	width: 360px;
-    height: fit-content;
-	padding: 24px 24px 0px 24px;
-	gap: 20px; /* Adjusted for spacing between elements */
-	border-radius: 16px;
-	border: 1px solid #d4d3d3;
-	display: flex;
-	flex-direction: column; /* Set column layout */
-}
-
-.diary {
-	width: 312px;
-	height: 24px;
-	font-family: Pretendard Variable;
+	margin-top: 24px;
+	margin-bottom: 42px;
 	font-size: 24px;
 	font-weight: 700;
 	line-height: 24px;
-	letter-spacing: -0.01em;
-	text-align: left;
 }
 
-.selectbox {
-	width: 312px;
-	height: 68px;
-	gap: 20px;
+.diarystore {
+	border-bottom: 2px solid #000;
 	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
+	align-items: center;
+	justify-content: center;
+	padding: 12px 8px;
+	color: #000;
 }
 
-#title,
-#content {
-	border: 1px solid #d4d3d3;
-	width: 312px;
-	padding: 12px 16px;
-	gap: 10px;
+.photostore {
+	color: #ababab;
+}
+
+/* 필터 */
+.filter {
+	min-width: 120px;
+	padding: 4px;
 	border-radius: 8px;
-	margin-bottom: 16px; /* Add space below each input */
+	border: 1px solid #c7c7c7;
+	height: 32px;
+	margin-bottom: 42px;
 }
 
-#title {
-	height: 48px;
+/* 일기 보여주는 곳 */
+.wrapper__left__body {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 24px;
 }
 
-#content {
-	height: 128px;
+.moodWrapper__item {
+	max-width: 380px;
+	display: flex;
+	flex-direction: column;
+	gap: 8px;
+}
+
+.mood-thumbnail {
+	height: 285px;
+	width: auto;
+}
+
+.mood-image {
+	height: 100%;
+	width: 100%;
+}
+
+.mood-feel {
+	width: 100%;
+	display: flex;
+	gap: 16px;
+	align-items: center;
+	justify-content: space-between;
+	text-align: left;
+	font-size: 14px;
+	color: #777;
+}
+
+.detail-thumbnail {
+	width: 100%;
+	text-align: left;
+	font-size: 14px;
+	font-weight: 600;
+	line-height: 20px;
+}
+
+.happy {
+	color: #ea5757;
+}
+
+.sad {
+	color: #28b4e1;
+}
+
+.surprised {
+	color: #d59029;
+}
+
+.mad {
+	color: #777;
+}
+
+.etc {
+	color: #a229ed;
+}
+
+.mood-date {
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 24px;
+	color: #919191;
+	text-align: right;
+	width: 100%;
+}
+
+.mood-title {
+	width: 100%;
+	font-size: 18px;
+	font-weight: 700;
+	line-height: 24px;
+}
+
+/* 일기등록 상자*/
+.wrapper__right__body {
+	min-width: 360px;
+	height: fit-content;
+	border-radius: 16px;
+	background-color: #fff;
+	border: 1px solid #d4d3d3;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	padding: 24px;
+	gap: 40px;
+	text-align: left;
+	font-size: 24px;
+	color: #000;
+}
+
+.diary {
+	width: 100%;
+	font-size: 24px;
+	font-weight: 700;
+}
+
+.wrapper__right__body_ment {
+	width: 100%;
+	font-size: 20px;
+	font-weight: 600;
 }
 
 .diary-feel {
 	display: flex;
 	flex-direction: column;
-	font-family: Pretendard Variable;
-	font-size: 20px;
-	font-weight: 600;
-	line-height: 24px;
-	letter-spacing: -0.01em;
-	text-align: left;
-	width: 312px;
-	height: 108px;
 	gap: 16px;
+}
+
+.selectbox {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 20px;
+	font-size: 18px;
+	font-weight: 500;
+	line-height: 20px;
+	color: #333;
 }
 
 .diary-select {
 	display: flex;
-	flex-direction: row;
-	font-family: Pretendard Variable;
-	font-size: 18px;
-	font-weight: 500;
-	line-height: 20px;
-	letter-spacing: -0.01em;
-	text-align: left;
-	color: #333333;
 	gap: 8px;
+	justify-content: center;
+	align-items: center;
+}
+
+.writingBox {
+	display: flex;
+	flex-direction: column;
+	gap: 24px;
 }
 
 .diary-title {
-	color: #333333;
-	font-family: Pretendard Variable;
+	display: flex;
+	flex-direction: column;
+	gap: 8px;
+	width: 100%;
 	font-size: 14px;
 	font-weight: 500;
 	line-height: 20px;
-	letter-spacing: -0.01em;
-	text-align: left;
-	margin-bottom: 8px; /* Space below labels */
+	color: #333;
 }
 
-.diary-content {
-    width: 312px;
-	height: 128px;
-	color: #333333;
-	font-family: Pretendard Variable;
-	font-size: 14px;
-	font-weight: 500;
-	line-height: 20px;
-	letter-spacing: -0.01em;
+#diary-title,
+#diary-content {
+	appearance: none;
+	width: 100%;
+	border-radius: 8px;
+	background-color: #fff;
+	border: 1px solid #d4d3d3;
+	padding: 12px 16px;
 	text-align: left;
-	margin-bottom: 8px; /* Space below labels */
+	font-size: 16px;
+	font-weight: 500;
+	line-height: 24px;
+}
+
+#diary-title::placeholder,
+#diary-content::placeholder {
+	color: #ababab;
 }
 
 .diary-submit {
-	display: flex;
-	justify-content: center; /* Center the button horizontally */
-	align-items: center;
-	border: none;
-	width: 312px;
-	height: 48px;
-	padding: 8px 10px;
-	gap: 10px;
+	width: 100%;
 	border-radius: 8px;
-	background-color: #f0f0f0; /* Set a background color */
-	cursor: pointer; /* Change cursor on hover */
-	margin: 250px 0px 24px 0px;
-
-}
-
-.submit {
-	width: 312px;
+	background-color: #c7c7c7;
 	height: 48px;
+	display: flex;
+	align-items: center;
+	border: 0px;
+	justify-content: center;
+	padding: 8px 10px;
+	box-sizing: border-box;
+	font-size: 18px;
+	font-weight: 600;
+	line-height: 24px;
+	color: #f2f2f2;
 }
