--- a/01-diary/detail/detail.css
+++ b/01-diary/detail/detail.css
@@ -29,16 +29,25 @@
     gap: 10px;
 }
 
-.section_container {
+.detail_section_container {
     display: flex;
     flex-direction: column;
-    gap: 24px;
+    gap: 16px;
 }
 
 .main_contents_container {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    border-bottom: 1px solid black;
+    padding-bottom: 16px;
+}
+
+.main_contents_article {
     width: 1168px;
     display: flex;
     flex-direction: column;
+    
     gap: 24px;
 }
 
@@ -100,12 +109,14 @@
 }
 
 .main_contents_text_container {
+    width: 1168px;
     display: flex;
     flex-direction: column;
     gap: 13px;
 }
 
 .main_contents_text_title {
+    width: 100%;
     font-weight: 600;
     font-size: 16px;
     color: black;
@@ -134,4 +145,82 @@
     font-weight: 500;
     font-size: 18px;
     color: #1C1C1C;
+}
+
+.reminiscence_container {
+    width: 1198px;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.reminiscence_container_items {
+    display: flex;
+    flex-direction: column;
+    gap: 13px;
+}
+
+.reminiscence_title {
+    width: 100%;
+    font-weight: 600;
+    font-size: 18px;
+    color: black;
+}
+
+.reminiscence_input_container {
+    height: 48px;
+    display: flex;
+    gap: 10px;
+}
+
+.reminiscence_text {
+    width: 1101px;
+
+    border: 1px solid #D4D3D3;
+    border-radius: 8px;
+    padding: 12px 16px 12px 16px;
+}
+
+.reminiscence_input_button {
+    width: 51px;
+    height: 100%;
+    background-color: black;
+
+    font-weight: 600;
+    font-size: 18px;
+
+    color: white;
+
+    border-radius: 8px;
+}
+
+.reminiscence_list_container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
+.reminiscence_list_container_items {
+    width: 100%;
+    display: flex;
+    gap: 12px;
+}
+
+.reminiscence_list_item_text {
+    font-weight: 500;
+    font-size: 16px;
+    color: black;
+}
+
+.reminiscence_list_item_date {
+    font-weight: 400;
+    font-size: 16px;
+    color: #777777;
+}
+
+.break_line {
+    width: 100%;
+    height: 1px;
+    border: 1px solid #E4E4E4;
 }
