--- a/styles/diary.css
+++ b/styles/diary.css
@@ -328,8 +328,10 @@ footer span {
   border: 1px solid #c7c7c7;
   background: #fff;
 }
+
 #optionList {
   position: absolute;
+  z-index: 99;
   top: 0;
   display: flex;
   flex-direction: column;
@@ -364,4 +366,27 @@ footer span {
   font-style: normal;
   font-weight: 500;
   line-height: 24px;
+}
+
+#upFloatingButton.active {
+  display: block;
+  position: fixed;
+  bottom: 30px;
+  right: 20%;
+}
+#upFloatingButton.none {
+  display: none;
+}
+.diary_card {
+  position: relative;
+}
+
+.diary_card #deleteButton {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+}
+.diary_card #deleteButton:hover {
+  transform: scale(120%);
+  transition: transform 0.5s;
 }
