--- a/styles/diaryDetail.css
+++ b/styles/diaryDetail.css
@@ -1,3 +1,9 @@
+.scroll-behavior {
+  height: 100vh;
+  overflow-y: scroll;
+  scroll-behavior: smooth;
+}
+
 .container-layout {
   max-width: 1168px;
   margin: 0 auto;
@@ -99,6 +105,12 @@ main #view.view #feelingViewContainer #feeling_text.surprised {
   color: #d59029;
 }
 
+main #view.view #createdAtDate {
+  color: #919191;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+}
 main #view.view #contentViewContainer {
   display: flex;
   flex-direction: column;
@@ -115,7 +127,16 @@ main #view.view #contentViewContainer p {
   line-height: 20px;
 }
 
-#view button {
+#view .buttons_container {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 1rem;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid black;
+  /* box-sizing: content-box; */
+}
+#view .buttons_container button {
   width: fit-content;
   padding: 8px 10px;
   border-radius: 8px;
@@ -123,6 +144,74 @@ main #view.view #contentViewContainer p {
   background: #fff;
   align-self: flex-end;
 }
+
+.comments_container {
+}
+.comments_container h4 {
+  color: #000;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 24px;
+  padding: 14px 0;
+}
+.comments_container form {
+  display: flex;
+  width: 100%;
+  gap: 1rem;
+  margin-bottom: 1rem;
+}
+.comments_container input {
+  width: max-content;
+  width: 100%;
+  padding: 12px 16px;
+  border-radius: 8px;
+  border: 1px solid #d4d3d3;
+}
+.comments_container button {
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 24px;
+  border-radius: 8px;
+  padding: 12px 16px;
+  flex-shrink: 0;
+}
+
+.comments_container button.active {
+  background-color: #000;
+  color: #fff;
+}
+.comments_container button.none {
+  background: #c7c7c7;
+  color: #f2f2f2;
+}
+
+.comments_container ul {
+  display: flex;
+  flex-direction: column;
+}
+.comments_container ul li {
+  display: flex;
+  border-bottom: 1px solid #e4e4e4;
+  padding: 12px 0;
+  gap: 12px;
+}
+.comments_container ul li:nth-last-child(1) {
+  display: flex;
+  align-items: center;
+  border-bottom: none;
+}
+.comments_container ul li p {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+}
+.comments_container ul li p:nth-last-child(1) {
+  color: #777;
+  font-weight: 400;
+  line-height: 24px; /* 150% */
+}
+
 #edit.edit {
   display: block;
 }
