[240902] 박진태 Day06 과제

--- a/homework/index.css
+++ b/homework/index.css
@@ -364,7 +364,9 @@ select#mood-selection {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-
+div#topScroller-area {
+  position: sticky;
+}
 
 .footer {
   width: 100%;
