[240902] JS: 일기등록 - 스크롤 내릴 시 필터 배경색 반전, 플로팅 버튼 클릭 시 스크롤 맨 위로 이동 구현

--- a/01-diary/index.css
+++ b/01-diary/index.css
@@ -329,6 +329,19 @@
     padding: 8px 10px 8px 10px;
 }
 
+.top_scroll_floating_button {
+    width: 40px;
+    height: 40px;
+    border: 1px solid #F2F2F2;
+    border-radius: 100%;
+
+    background-color: #FFFFFFE5;
+    
+    position: fixed;
+    bottom: 152px;
+    right: 376px;
+}
+
 /* 바닥글 영역 */
 
 .footer {
@@ -365,3 +378,4 @@
     font-size: 14px;
     color: #919191;
 }
+
