--- a/01-diary/detail/detail.css
+++ b/01-diary/detail/detail.css
@@ -1,4 +1,11 @@
+* {
+    box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
+}
+
 .root_container {
+    width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -8,7 +15,12 @@
 }
 
 .header_container {
+    width: 1200px;
+    height: 60px;
+    display: flex;
+    align-items: center;
 
+    gap: 10px;
 }
 
 .home_link {
@@ -16,7 +28,7 @@
 }
 
 .header_title {
-    width: 1168px;
+    width: 100%;
     height: 40px;
     font-weight: 700;
     font-size: 18px;
@@ -36,6 +48,7 @@
 }
 
 .main_contents_container {
+    width: 1168px;
     display: flex;
     flex-direction: column;
     gap: 24px;
@@ -58,6 +71,7 @@
 }
 
 .main_contents_title {
+    width: 100%;
     font-weight: 700;
     font-size: 22px;
     border-bottom: 2px solid black;
