--- a/다이어리/diary.css
+++ b/다이어리/diary.css
@@ -566,7 +566,7 @@ ul li {
   letter-spacing: -0.14px;
 }
 .topScroll {
-  position: relative;
-  top: -250px;
-  right: -500px;
+  position: sticky;
+  top: 0px;
+  
 }
