--- a/css/detail.css
+++ b/css/detail.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   gap: 24px;
-  padding-bottom: 50px;
+  padding: 50px 0;
 }
 .detailWrap h2 {
   border-bottom: 2px solid #000;
@@ -33,17 +33,63 @@
   font-size: var(--font-size-1);
   color: var(--font-color-7);
 }
+.detailWrap .detailContent {
+  min-height: 40vh;
+}
 .detailWrap .buttonWrap {
   width: 100%;
   display: flex;
   justify-content: flex-end;
   gap: 16px;
+  border-bottom: 1px solid #000;
+  padding: 16px 0;
 }
-.detailWrap .whiteBtn {
+
+.whiteBtn {
   background-color: #fff;
   color: var(--font-color-8);
   font-weight: 500;
   padding: 8px 10px;
   border: 1px solid var(--border-color-1);
   border-radius: 8px;
+}
+
+.blackBtn {
+  background-color: var(--font-color-8);
+  color: #fff;
+  font-weight: 500;
+  padding: 8px 10px;
+  border: 1px solid var(--border-color-1);
+  border-radius: 8px;
+  white-space: nowrap;
+}
+
+.commentWrap .commentInputWrap {
+  display: flex;
+  align-items: stretch;
+  gap: 16px;
+  padding: 13px 0;
+}
+.commentWrap .commentInputWrap #commentInput {
+  width: 100%;
+  height: 48px;
+  border-radius: 8px;
+  border: 1px solid var(--border-color-1);
+  padding: 12px 16px;
+}
+.commentWrap .commentList {
+  display: flex;
+  flex-direction: column;
+}
+.commentWrap .commentList ul li {
+  display: flex;
+  gap: 12px;
+  border-bottom: 1px solid var(--border-color-1);
+  padding: 12px 0;
+}
+.commentWrap .commentList ul li:last-child {
+  border-bottom: none;
+}
+.commentWrap .commentList ul li .commentDate {
+  color: var(--font-color-7);
 }/*# sourceMappingURL=detail.css.map */
