--- a/css/detail.scss
+++ b/css/detail.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   gap: 24px;
-  padding-bottom: 50px;
+  padding: 50px 0;
 
   h2 {
     border-bottom: 2px solid #000;
@@ -37,19 +37,74 @@
     }
   }
 
+  .detailContent {
+    min-height: 40vh;
+  }
+
   .buttonWrap {
     width: 100%;
     display: flex;
     justify-content: flex-end;
     gap: 16px;
+    border-bottom: 1px solid #000;
+    padding: 16px 0;
+  }
+}
+
+.whiteBtn {
+  background-color: #fff;
+  color: var(--font-color-8);
+  font-weight: 500;
+  padding: 8px 10px;
+  border: 1px solid var(--border-color-1);
+  border-radius: 8px;
+}
+
+.blackBtn {
+  background-color: var(--font-color-8);
+  color: #fff;
+  font-weight: 500;
+  padding: 8px 10px;
+  border: 1px solid var(--border-color-1);
+  border-radius: 8px;
+  white-space: nowrap;
+}
+
+.commentWrap {
+  .commentInputWrap {
+    display: flex;
+    align-items: stretch;
+    gap: 16px;
+    padding: 13px 0;
+
+    #commentInput {
+      width: 100%;
+      height: 48px;
+      border-radius: 8px;
+      border: 1px solid var(--border-color-1);
+      padding: 12px 16px;
+    }
   }
 
-  .whiteBtn {
-    background-color: #fff;
-    color: var(--font-color-8);
-    font-weight: 500;
-    padding: 8px 10px;
-    border: 1px solid var(--border-color-1);
-    border-radius: 8px;
+  .commentList {
+    display: flex;
+    flex-direction: column;
+
+    ul {
+      li {
+        display: flex;
+        gap: 12px;
+        border-bottom: 1px solid var(--border-color-1);
+        padding: 12px 0;
+
+        &:last-child {
+          border-bottom: none;
+        }
+
+        .commentDate {
+          color: var(--font-color-7);
+        }
+      }
+    }
   }
 }
