--- a/css/edit.css
+++ b/css/edit.css
@@ -2,7 +2,7 @@
   border: none;
   width: 100%;
   gap: 24px;
-  padding: 0 0 50px;
+  padding: 50px 0;
 }
 .editWrap .diaryWrite .buttonBox {
   display: flex;
