무드 번호별 컬러 추가

--- a/css/index.scss
+++ b/css/index.scss
@@ -13,6 +13,12 @@
   --bg-color-2: #c7c7c7;
   --bg-color-3: rgba(58, 181, 15, 0.05);
 
+  --mood-color-1: #e4fdff;
+  --mood-color-2: #fff9e4;
+  --mood-color-3: #e0e0e0;
+  --mood-color-4: #ffe4e5;
+  --mood-color-5: #ead2f9;
+
   --border-color-1: #d4d3d3;
   --border-color-2: #c7c7c7;
 
