--- a/css/main.css
+++ b/css/main.css
@@ -158,6 +158,25 @@ section .diaryList ul li {
 }
 section .diaryList ul li:hover {
   transform: scale(1.02);
+  box-shadow: 0 0 16px rgba(0, 0, 0, 0.1);
+  border-radius: 20px;
+}
+section .diaryList ul li:hover figcaption {
+  padding: 0 16px;
+}
+section .diaryList ul li:hover img {
+  animation: vibration 0.5s infinite;
+}
+@keyframes vibration {
+  0% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(8deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
 }
 section .diaryList ul li .closeBtn {
   position: absolute;
@@ -172,6 +191,28 @@ section .diaryList ul li figure {
   flex-direction: column;
   gap: 16px;
   padding-bottom: 16px;
+}
+section .diaryList ul li figure div {
+  border-radius: 20px;
+  overflow: hidden;
+}
+section .diaryList ul li figure div img {
+  display: block;
+}
+section .diaryList ul li figure .imgBox_1 {
+  background-color: var(--mood-color-1);
+}
+section .diaryList ul li figure .imgBox_2 {
+  background-color: var(--mood-color-2);
+}
+section .diaryList ul li figure .imgBox_3 {
+  background-color: var(--mood-color-3);
+}
+section .diaryList ul li figure .imgBox_4 {
+  background-color: var(--mood-color-4);
+}
+section .diaryList ul li figure .imgBox_5 {
+  background-color: var(--mood-color-5);
 }
 section .diaryList ul li figure figcaption {
   display: flex;
