[240902] JS: 일기상세 - 댓글(회고) 로컬 스토리지 저장하도록 구현

--- a/01-diary/index.css
+++ b/01-diary/index.css
@@ -108,8 +108,9 @@
 }
 
 .diary {
-    position: relative;
     width: 380px;
+    height: 373px;
+    position: relative;
     display: flex;
     flex-direction: column;
     gap: 16px;
